[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/dialogic/Editor/Events/Parts/Text/GreyLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialogic/Editor/Events/Parts/Text/CustomLineEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://dialogic/custom-events/initialize_fight_data/InitializeFightPart.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 11.0
content_margin_right = 9.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.12549, 0.141176, 0.192157, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0980392, 0.113725, 0.152941, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="InitializeFightPart" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 374.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_top = 0.0
margin_right = 263.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Is a bossfight?
This disallows the player to flee in battle "

[node name="BossFightCheckBox" type="CheckBox" parent="HBoxContainer"]
margin_left = 350.0
margin_right = 374.0
margin_bottom = 31.0
size_flags_horizontal = 10

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 35.0
margin_right = 374.0
margin_bottom = 39.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 43.0
margin_right = 374.0
margin_bottom = 67.0

[node name="Label2" parent="HBoxContainer2" instance=ExtResource( 1 )]
margin_top = 5.0
margin_right = 49.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "XP Gain"

[node name="XPGain" type="SpinBox" parent="HBoxContainer2"]
margin_left = 53.0
margin_right = 127.0
margin_bottom = 24.0
min_value = 1.0
max_value = 1000.0
value = 10.0

[node name="Label3" parent="HBoxContainer2" instance=ExtResource( 1 )]
margin_left = 131.0
margin_top = 5.0
margin_right = 207.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Money Gain"

[node name="MoneyGain" type="SpinBox" parent="HBoxContainer2"]
margin_left = 211.0
margin_right = 285.0
margin_bottom = 24.0
min_value = 1.0
max_value = 1000.0
value = 10.0

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 71.0
margin_right = 374.0
margin_bottom = 75.0

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_top = 79.0
margin_right = 374.0
margin_bottom = 93.0

[node name="Label2" parent="HBoxContainer3" instance=ExtResource( 1 )]
margin_top = 0.0
margin_right = 66.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Resources"

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
margin_top = 97.0
margin_right = 374.0
margin_bottom = 124.0

[node name="Label2" parent="HBoxContainer4" instance=ExtResource( 1 )]
margin_top = 6.0
margin_right = 51.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 1"

[node name="Player1Res" parent="HBoxContainer4" instance=ExtResource( 2 )]
margin_left = 55.0
margin_right = 185.0
margin_bottom = 27.0
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="Label3" parent="HBoxContainer4" instance=ExtResource( 1 )]
margin_left = 189.0
margin_top = 6.0
margin_right = 240.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 2"

[node name="Player2Res" parent="HBoxContainer4" instance=ExtResource( 2 )]
margin_left = 244.0
margin_right = 374.0
margin_bottom = 27.0
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
margin_top = 128.0
margin_right = 374.0
margin_bottom = 155.0

[node name="Label2" parent="HBoxContainer5" instance=ExtResource( 1 )]
margin_top = 6.0
margin_right = 63.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Song Data"

[node name="SongDataRes" parent="HBoxContainer5" instance=ExtResource( 2 )]
margin_left = 67.0
margin_right = 197.0
margin_bottom = 27.0
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
